--- a/homework4_2/src/main/res/layout/activity_main.xml
+++ b/homework4_2/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
+    android:id="@+id/frameLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,9 +8,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/swither"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="16dp"
+        />
 
 
     <com.example.homework4_2.Custom
+        android:id="@+id/customView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:rectColor="@color/colorPrimary"
@@ -19,8 +28,5 @@
         app:arc2Color="@color/yellow"
         app:arc3Color="@color/blue"
         app:arc4Color="@color/green"/>
-
-
-
 
 </FrameLayout>
