--- a/homework6/src/main/res/layout/activity_edit_item.xml
+++ b/homework6/src/main/res/layout/activity_edit_item.xml
@@ -5,55 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Создание нового файла"
-        android:textSize="30sp"
         android:layout_margin="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="Редактирование файла"
+        android:textColor="#000000"
+        android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:textColor="#000000"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etText"
+        android:id="@+id/fileText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:hint="Введите текст для сохранения в файл"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/writeFileName" />
+        app:layout_constraintTop_toBottomOf="@id/fileName" />
 
     <EditText
-        android:id="@+id/writeFileName"
+        android:id="@+id/fileName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:hint="Введите имя нового файла"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title" />
 
     <Button
-        android:id="@+id/btnSave"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/etText"
-        app:layout_constraintLeft_toLeftOf="@+id/etText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Создать файл"/>
-
-
-    <Button
-        android:id="@+id/toSecondActivity"
+        android:id="@+id/btnSave2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnSave"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:text="Перейти к списку файлов"/>
-
+        android:text="Сохранить файл"
+        app:layout_constraintLeft_toLeftOf="@+id/fileText"
+        app:layout_constraintTop_toBottomOf="@+id/fileText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
