--- a/homework4_1/src/main/res/layout/activity_edit_contact.xml
+++ b/homework4_1/src/main/res/layout/activity_edit_contact.xml
@@ -38,6 +38,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editName" />
 
+    <Switch
+        android:id="@+id/switcher2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="Телефон/E-mail"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editPhone" />
+
     <Button
         android:id="@+id/buttonSave"
         android:layout_width="wrap_content"
