--- a/homework4_1/src/main/res/layout/contact_add.xml
+++ b/homework4_1/src/main/res/layout/contact_add.xml
@@ -38,6 +38,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addName" />
 
+    <Switch
+        android:id="@+id/switcher1"
+        android:layout_margin="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Телефон/E-mail"/>
+
     <Button
         android:id="@+id/buttonAdd"
         android:layout_width="wrap_content"
