--- a/homework10/src/main/res/layout/activity_main.xml
+++ b/homework10/src/main/res/layout/activity_main.xml
@@ -22,4 +22,10 @@
         android:text="Stop service"
         android:layout_gravity="center"/>
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switcher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
 </LinearLayout>
